--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@react-three/drei": "^10.0.7",
     "clsx": "^2.1.1",
+    "core-js": "^3.41.0",
     "motion": "^12.9.1",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
