--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@react-three/drei": "^10.0.7",
+    "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "core-js": "^3.41.0",
+    "framer-motion": "^12.9.2",
     "motion": "^12.9.1",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
@@ -20,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
+    "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "three-globe": "^2.42.4"
   },
